--- a/drombler-commons-spring/drombler-commons-spring-core/pom.xml
+++ b/drombler-commons-spring/drombler-commons-spring-core/pom.xml
@@ -64,10 +64,6 @@
     
     <dependencies>
         <dependency>
-            <groupId>org.softsmithy.lib</groupId>
-            <artifactId>softsmithy-lib-core</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
@@ -81,7 +77,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
+            <artifactId>spring-core</artifactId>
         </dependency>
     </dependencies>
 </project>
