--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/pom.xml
@@ -117,5 +117,14 @@ Contributor(s): .
             <artifactId>slf4j-jdk14</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-context</artifactId>
+            <version>${project.version}</version>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-action-fx-context</artifactId>
+                <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
