--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/pom.xml
@@ -121,10 +121,11 @@ Contributor(s): .
             <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-context</artifactId>
             <version>${project.version}</version>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-action-fx-context</artifactId>
-                <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-action-fx-context</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
