--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,4 @@
 language: java
 jdk:
-  - oraclejdk8
-  
-sudo: false
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+  - openjdk11
+
