--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-controls/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-controls/pom.xml
@@ -108,5 +108,27 @@ Contributor(s): .
             <artifactId>slf4j-jdk14</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.drombler.iso9660fs</groupId>
+            <artifactId>drombler-iso9660fs</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>pathsample</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.openjfx</groupId>
+                        <artifactId>javafx-maven-plugin</artifactId>
+                        <configuration>
+                            <mainClass>org.drombler.commons.fx.samples.scene.control.treeview.path.PathTreeViewSample</mainClass>
+                        </configuration>
+                    </plugin>                
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
