--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-parent/pom.xml
@@ -86,5 +86,15 @@ Contributor(s): .
             </plugins>
         </pluginManagement>
     </build>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.drombler.iso9660fs</groupId>
+                <artifactId>drombler-iso9660fs</artifactId>
+                <version>0.4</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     
 </project>
